# knowetrade

./: .env.example  .gitignore  AGENTS.md  README.md  netlify.toml  package-lock.json  package.json  requirements.txt
.cursor/rules/: knowetrade.mdc
apps/api/: main.py  pyproject.toml  requirements.txt  start.py
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: App.tsx  api.ts  schedule.ts  styles.css
apps/web/src/pages/: DashboardPage.tsx  JobRunsPage.tsx  OrdersPage.tsx  PositionsPage.tsx  ProposedOrdersPage.tsx  RiskPage.tsx  SignalsPage.tsx  SymbolsPage.tsx  SystemHealthPage.tsx
apps/worker/: main.py  pyproject.toml  requirements.txt
infra/: netlify.toml  render.yaml
supabase/: config.toml  seed.sql
supabase/migrations/: 0001_initial_schema.sql  0002_symbols_universe_columns.sql  0003_price_bars_table.sql  0004_signals_reason.sql  0005_proposed_orders.sql  0006_orders_and_fills_alignment.sql  0007_audit_logs.sql
tests/: test_risk.py
