[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowetrade-api"
version = "0.1.0"
description = "KnoweTrade FastAPI service scaffold"
readme = "../../README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.31.0",
  "sqlalchemy>=2.0.35",
  "psycopg[binary]>=3.2.2",
  "httpx>=0.27.2",
]
