[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowetrade-worker"
version = "0.1.0"
description = "KnoweTrade strategy/worker scaffold"
readme = "../../README.md"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0.35",
  "psycopg[binary]>=3.2.2",
  "httpx>=0.27.2",
]
